convert some records to classes for safer usage